--- a/package.json
+++ b/package.json
@@ -4,24 +4,16 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
   "main": "Main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "csv-parse": "^6.1.0",
     "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.3",
     "mssql": "^12.0.0",
     "puppeteer": "^24.26.1"
   }
- {
-  "name": "your-project-name",
-  "version": "1.0.0",
-  "type": "module", 
-  "dependencies": {
-    "csv-parser": "^3.0.0",
-    "mssql": "^10.0.1",
-    "puppeteer": "^21.4.1"
-  }
-} 
 }
