--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "csv-parse": "^6.1.0",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
-    "mssql": "^12.0.0",
-    "puppeteer": "^24.26.1"
-  }
+    "mssql": "^12.1.0",
+    "puppeteer": "^24.31.0"
+  },
+  "keywords": []
 }
